Full SPARQL parsing yielding Plan<> trees